--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div id="pills-about" class="jumbotron jumbotron-fluid">
       <div class="container-fluid">
         <div class="col-12">
-        <h1 class="display-2 padding text-center">About</h1>
+        <h1 class="about-title display-2 padding text-center">About</h1>
         <hr class="light" />
       </div>
       <div class="col-12 mt-5">
@@ -134,10 +134,10 @@
       <hr />
       </section>
     <!--- Food Section  ----->
-    <div id="pills-food" class="bg-light container-fluid padding">
+    <div id="pills-food" class="container-fluid padding">
       <div class=" row padding">
         <div class="col-12">
-        <h1 class="display-2 padding text-center">Food</h1>
+        <h1  class="food-title display-2 padding text-center">Food</h1>
       </div>
         <div class="col-md-12 col-lg-6">
           <p class="lead">
@@ -162,7 +162,7 @@
     <div id="pills-grooming" class="container-fluid padding">
       <div class="row text-center padding">
         <div class="col-12">
-        <h1 class="display-2 padding mt-5">Grooming</h1>
+        <h1 class="grooming-title display-2 padding mt-5">Grooming</h1>
         <hr class="light" />
       </div>
       <div class="col-12 mt-5 text-center">
