--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <Title>My Dogs</Title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="bs-4/css/bootstrap.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
@@ -38,35 +39,22 @@
       </div>
     </nav>
     <!--- Carousel-slider ----->
-    <div id="pills-slides" class="carousel slide " data-ride="carousel">
-      <ul class="carousel-indicators">
-        <li data-target="#pills-slides" data-slide-to="0" class="active"></li>
-        <li data-target="#pills-slides" data-slide-to="1"></li>
-        <li data-target="#pills-slides" data-slide-to="2"></li>
-      </ul>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block  w-100" src="img/pets.jpeg" />
-          <div class="carousel-caption">
-          <h1 class="display-2 pic-1">Benji & Nelly</h1>
-          <button type="button" class="btn btn-outline-light btn-lg">View Demo</button>
-          <button type="button" class="btn btn-primary btn-lg">Get Started</button>
-          </div>
+    <section class="Jumbo pb-3">
+        <div class="container-fluid pr-0">
+          <div class="row d-flex">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <h1 class="display-3 mt-5 pt-5 pl-5">Dogs Make Our Lives Better</h1>
+            <button type=" button" style="font-size:24px;" class="btn btn-primary btn-lg mt-5 ml-5">Learn More</button>
+            <button type=" button" style="font-size:24px;" class="btn btn-primary btn-lg mt-5 ml-5">Sign Up</button>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/nelly-2.jpeg" />
-          <div class="carousel-caption">
-          <h1 class="display-2">Nelly</h1>
-        </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/Benji-3.JPG" />
-          <div class="carousel-caption">
-          <h1 class="display-2">Benji</h1>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 mt-2">
+          <div class="pet-container">
+          <img src="img/pets.jpeg" class="img-fluid border-radius pets" style="height:77vh; width:49vw; object-fit:cover;" alt="Responsive image">
         </div>
         </div>
       </div>
-    </div>
+        </div>
+    </section>
     <!--- Welcome  ----->
     <section class="tab-content">
     <div id="pills-about" class="jumbotron jumbotron-fluid">
