--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="overflow-x: hidden;" lang="en">
   <head>
     <Title>My Dogs</Title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <!-- <link rel="stylesheet" href="css/reset.css"/> -->
     <link rel="stylesheet" href="css/main.css"/>
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
-   <body data-spy="scroll" data-target="#navbarResponsive">
+   <body data-spy="scroll" data-target="#navbarResponsive" style="overflow-x: hidden;">
       <!--- Nav-bar ----->
       <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
@@ -44,9 +45,9 @@
         <li data-target="#pills-slides" data-slide-to="1"></li>
         <li data-target="#pills-slides" data-slide-to="2"></li>
       </ul>
-      <div class="carousel-inner">
+      <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="d-block  w-100" src="img/pets.jpeg" />
+          <img class="d-block w-100 mobile" style="height:80rem;" src="img/pets.jpeg" />
           <div class="carousel-caption">
           <h1 class="display-2 pic-1">Benji & Nelly</h1>
           <button type="button" class="btn btn-outline-light btn-lg">View Demo</button>
@@ -54,13 +55,13 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/nelly-2.jpeg" />
+          <img class="d-block w-100 mobile" style="height:80rem;" src="img/nelly-2.jpeg" />
           <div class="carousel-caption">
           <h1 class="display-2">Nelly</h1>
         </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/Benji-3.JPG" />
+          <img class="d-block w-100 mobile" style="height:80rem;" src="img/Benji-3.JPG" />
           <div class="carousel-caption">
           <h1 class="display-2">Benji</h1>
         </div>
