fixes to overflow

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="overflow-x: hidden;" lang="en">
+<html lang="en">
   <head>
     <Title>My Dogs</Title>
     <meta charset="UTF-8"/>
