fixed nav width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css"/>
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
-   <body data-spy="scroll" data-target="#navbarResponsive" style="overflow-x: hidden;">
+   <body data-spy="scroll" data-target="#navbarResponsive">
       <!--- Nav-bar ----->
       <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
